# tally

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  README.md  SECURITY_FIXES_PHASE1.md  SECURITY_REVIEW.md  Tally Plan.docx  dev.sh  docker-compose.yml  install.sh  manifest.json  nohup.out  start-tally.sh  test_admin_ui.mjs  test_backup_api.sh  uninstall.sh
backend/: Dockerfile  pyproject.toml  test_reset.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: categorize.py  ollama_client.py
backend/app/models/: __init__.py  account.py  category.py  checklist.py  net_worth.py  recurring.py  setting.py  snapshot.py  stock_holding.py  stock_price.py  tag.py  transaction.py
backend/app/routers/: accounts.py  admin.py  categories.py  categorization_config.py  checklist.py  dashboard.py  display_config.py  net_worth.py  reports.py  snapshots.py  stock_holdings.py  tags.py  transactions.py  upload.py
backend/app/schemas/: __init__.py  account.py  category.py  checklist.py  net_worth.py  snapshot.py  stock_holding.py  transaction.py
backend/app/services/: analytics.py  backup.py  csv_ingestion.py  factory_reset.py  restore.py  rule_categorizer.py  schema_mapper.py  stock_price_service.py
backend/tests/: test_analytics_security.py  test_approve_all_pending.py  test_csv_ingestion_preview.py  test_rule_categorizer.py
deploy/: tally-backend.service  tally.conf
documents/: backup-restore-technical-reference.md  backup-restore-user-guide.md
frontend/: index.html  package-lock.json  package.json
json/: accounts.json  categories.json  settings.json  (+9 more)
(+20 files in other folders)
