[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tally-backend"
version = "0.1.0"
description = "Tally — Local-First Personal Finance Tracker Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "duckdb>=1.1.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "python-dateutil>=2.9.0",
    "chardet>=5.2.0",
    "greenlet>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
